# SMAZ-React-Native-Module

./: .gitignore  README.md  package.json  smaz-react.podspec  tsconfig.json
SMAZ-WASM-Wrapper-master/: main.cpp
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/smazreact/: SmazReactModule.java  SmazReactPackage.java
cpp/: smaz-react.cpp  smaz-react.h
ios/: SmazReact.h  SmazReact.mm
ios/SmazReact.xcodeproj/: project.pbxproj
src/: index.tsx
